# research_paper_implementations

./: .gitignore  README.md
attention_is_all_you_need/: README.md  kernel-metadata.json  notebook.ipynb  pyproject.toml  requirements-kaggle.txt
self_improving_coding_agents/: README.md  kernel-metadata.json  notebook.ipynb  pyproject.toml  requirements-kaggle.txt
self_improving_coding_agents/outputs/: iteration_metrics.csv  iteration_metrics.json  run_config.json
