[project]
name = "self-improving-coding-agents"
version = "0.1.0"
description = "Implementation of arXiv:2504.15228v2 self-improving coding agent with Kaggle-first execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.67.0",
]
